--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -127,20 +127,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataSession.cpp" />
+    <ClCompile Include="GeneralSession.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="System.cpp" />
+    <ClCompile Include="TitleSession.cpp" />
     <ClCompile Include="Tool.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataSession.h" />
+    <ClInclude Include="GeneralSession.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="System.h" />
+    <ClInclude Include="TitleSession.h" />
     <ClInclude Include="Tool.h" />
     <ClInclude Include="World.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="datas.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
