--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -158,7 +158,7 @@
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="datas.json" />
+    <Text Include="datas.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
